css for contact page, minor css and html changes. This phase of site is complete. Next steps will be to add js functionality for nav and photo gallery.

--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 	<section class="nav-padding">
 		<!-- About Stacy -->
 		<br>
-		<h2>ABOUT TEACUP WOOZY</h2>
+		<header><h2>ABOUT TEACUP WOOZY</h2></header>
 		<article id="about-container">
 			<br><br>
 			<img src="images/stacy-profile-photo-small.jpg" alt="Headshot of Stacy" id="about-photo">
 			
-			<header><h3>HI, I'M STACY</h3></header>
+			<h3>HI, I'M STACY</h3>
 			<p>I’m the owner of Teacup Woozy, a personalized travel planning company, and I started this business because over the years I have seen too many people get caught up and overwhelmed with trying to plan a “perfect” trip. Because of time constraints or feeling overwhelmed, they’d end up losing sight of why they wanted to travel in the first place. And, they’d frequently end up disappointed with how their trip turned out. </p>
 			<br>
 			<h5>This is where I can step in and help you.</h5>
