--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Teacup Woozy | Customized Travel Planning | Contact</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="tw.css">
 </head>
 <body>
+	<header id="nav-header">
+		<div id="logo">
+			<h1>T E A C U P   W O O Z Y<br>
+			<span>personalized travel planning</span></h1>
+		</div>
 
+		<nav id="nav-container">
+			<a href="#" id="menu-icon"></a>
+			<ul>
+				<li class="nav-menu"><a href="home.html">Home</a></li>
+				<li class="nav-menu"><a href="services.html">Services</a></li>
+				<li class="nav-menu"><a href="blog.html">Blog</a></li>
+				<li class="nav-menu"><a href="about.html">About</a></li>
+				<li class="nav-menu"><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>	
+	</header>
 
+	<section class="nav-padding">
+		<br>
+		<header><h2>GET IN TOUCH</h2></header>
+		<br><br>
+		<h5 id="contact">Have a question or comment?<br>
+			Drop me an <a href="mailtostacy@teacupwoozy.com&subject=Question%from%teacupwoozy.com">email</a>.</h5>
+		<br><br><br><br><br>
+		<br><br><br><br><br>
+<!-- 
 	<form action="#" method="#">
 		<fieldset>
 			<label>Name<span class="required">*</span></label>
@@ -21,8 +49,24 @@
 			<label>Your message<span class="required">*</span></label>
 			<input type="text" name="comment" class="input-field" placeholder="got something on your mind?" required>
 		</fieldset>
-	</form>
+	</form> -->
 
+</section>
+
+	<footer>
+		<br>
+		<h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
+		<h5>Two or three times a month, get hand-curated travel news and stories sent right to your inbox.</h5>
+		<h5>Sign up <a href="http://eepurl.com/dfZ7wr" target="_blank">here</a>!</h5>
+		<br><br>
+		<!-- flexbox -->
+		<div class="footer-container">
+			<div>
+				<p><a href="legal.html">Privacy Policy</a> | <a href="legal.html">Terms of Service</a> | <a href="legal.html">Disclaimers & Liability</a> | <a href="legal.html">Use of Cookies</a> (no, not those kinds)</p>
+				<p>Copyright &copy; 2018 Teacup Woozy LLC || All rights reserved.</p>
+			</div>
+		</div>
+	</footer>
 
 </body>
 </html>
