--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,21 @@
 	<section class="nav-padding">
 		<br>
 		<h2>TEACUP WOOZY TRAVEL BLOG</h2>
+		<article class="blog-container">
+			
+			<div class="blog-photo blog-cell">
+				<img src="images/blog/lemon-ginger-tea.jpg" alt="#">
+			</div>
+			<div class="blog-cell">
+				<h4 class="blog-index-titles"><a href="#">Getting Sick on the Road + the People Who Help Us</a></h4>
+				<p>If you've done any amount of traveling, there's a good chance that you've probably also been
+				sick on the road. It can be truly miserable and... <a href="#" class="blog-link">(more)</a></p>
+			</div>
+
+
+		</article>
+
+
 		<br><br>
 		<h4>Content Updates Coming Soon!</h4>
 		<br><br><br><br><br><br>
