no really. this is the it with all current nav commented out, including logo and tag line.

--- a/home.html
+++ b/home.html
@@ -17,10 +17,12 @@
 </head>
 <body>
 	<header id="nav-header">
-		<div id="logo">
+		<!-- <div id="logo">
 			<h1>T E A C U P   W O O Z Y<br>
 			<span>personalized travel planning</span></h1>
-		</div>
+		</div> -->
+
+
 
 		<!-- <nav id="nav-container">
 			<a href="#" id="menu-icon"></a>
