add navigation html content

--- a/home.html
+++ b/home.html
@@ -17,12 +17,36 @@
 </head>
 <body>
 	<header id="nav-header">
+		<nav class="navbar">
+			<a href="#" id="logo"><h1>T E A C U P W O O Z Y<br>
+				<span>personalized travel planning</span></h1>
+			</a>
+			<ul>
+				<li>
+					<a href="home.html" class="nav-links">Home</a>
+				</li>
+				<li>
+					<a href="services.html" class="nav-links">Services</a>
+				</li>
+				<li>
+					<a href="blog.html" class="nav-links">Blog</a>
+				</li>
+				<li>
+					<a href="about.html" class="nav-links">About</a>
+				</li>
+				<li>
+					<a href="contact.html" class="nav-links">Contact</a>
+				</li>
+			</ul>
+
+
+		</nav>
+		
+		
 		<!-- <div id="logo">
 			<h1>T E A C U P   W O O Z Y<br>
 			<span>personalized travel planning</span></h1>
 		</div> -->
-
-
 
 		<!-- <nav id="nav-container">
 			<a href="#" id="menu-icon"></a>
