--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 			<a href="#" id="logo"><h1>T E A C U P W O O Z Y<br>
 				<span>personalized travel planning</span></h1>
 			</a>
-			<ul>
+			<ul id="main-nav">
 				<li>
 					<a href="home.html" class="nav-links">Home</a>
 				</li>
