add hamburger menu icon and style

--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
 <body>
 	<header id="nav-header">
 		<nav class="navbar">
+			<span id="navbar-toggle">
+				<img src="images/menu-icon.png" alt="toggle button for dropdown menu">
+			</span>
 			<a href="#" id="logo"><h1>T E A C U P W O O Z Y<br>
 				<span>personalized travel planning</span></h1>
 			</a>
