add new nav to blog, create placeholder blog page

--- a/blog.html
+++ b/blog.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<title>Teacup Woozy | Personalized Travel Planning | Blog</title>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="tw.css">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107564560-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+    <meta charset="utf-8">
+    <title>Teacup Woozy | Personalized Travel Planning | Blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="tw.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107564560-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-	  gtag('config', 'UA-107564560-1');
-	</script>
+        gtag('config', 'UA-107564560-1');
+    </script>
 </head>
+
 <body>
-	<header id="nav-header">
-		<div id="logo">
-			<h1>T E A C U P   W O O Z Y<br>
-			<span>personalized travel planning</span></h1>
-		</div>
+    <header id="nav-header">
+        <nav class="navbar">
+            <span id="navbar-toggle">
+                <img src="images/menu-icon.png" alt="toggle button for dropdown menu">
+            </span>
 
-		<nav id="nav-container">
-			<a href="#" id="menu-icon"></a>
-			<ul>
-				<li class="nav-menu"><a href="home.html">Home</a></li>
-				<li class="nav-menu"><a href="services.html">Services</a></li>
-				<li class="nav-menu"><a href="blog.html">Blog</a></li>
-				<li class="nav-menu"><a href="about.html">About</a></li>
-				<li class="nav-menu"><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>	
-	</header>
-<!-- Main Content -->
-	<section class="nav-padding">
-		<br>
-		<h2>TEACUP WOOZY TRAVEL BLOG</h2>
-		<article class="blog-container">
-			
-			<div class="blog-photo blog-cell">
-				<img src="images/blog/lemon-ginger-tea.jpg" alt="#">
-			</div>
-			<div class="blog-cell">
-				<h4 class="blog-index-titles"><a href="#">Getting Sick on the Road + the People Who Help Us</a></h4>
-				<p>If you've done any amount of traveling, there's a good chance that you've probably also been
-				sick on the road. It can be truly miserable and... <a href="#" class="blog-link">(more)</a></p>
-			</div>
-
-
-		</article>
-
-
-		<br><br>
-		<h4>Content Updates Coming Soon!</h4>
-		<br><br><br><br><br><br>
-		<br><br><br><br><br><br>
-
-	</section>
+            <a href="#" id="logo">
+                <h1>T E A C U P W O O Z Y<br>
+                    <span>personalized travel planning</span></h1>
+            </a>
+            <ul id="main-nav">
+                <li>
+                    <a href="home.html" class="nav-links">Home</a>
+                </li>
+                <li>
+                    <a href="services.html" class="nav-links">Services</a>
+                </li>
+                <li>
+                    <a href="blog.html" class="nav-links">Blog</a>
+                </li>
+                <li>
+                    <a href="about.html" class="nav-links">About</a>
+                </li>
+                <li>
+                    <a href="contact.html" class="nav-links">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Main Content -->
+    <section class="nav-padding">
+        <br>
+        <h2>TEACUP WOOZY TRAVEL BLOG</h2>
+        
 
 
-	<footer>
-		<br>
-		<h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
-		<h5>Two or three times a month, get hand-curated travel news and stories sent right to your inbox.</h5>
-		<h5>Sign up <a href="http://eepurl.com/dfZ7wr" target="_blank">here</a>!</h5>
-		<br><br>
-		<!-- flexbox -->
-		<div class="footer-container">
-			<div>
-				<p><a href="legal.html">Privacy Policy</a> | <a href="legal.html">Terms of Service</a> | <a href="legal.html">Disclaimers & Liability</a> | <a href="legal.html">Use of Cookies</a> (no, not those kinds)</p>
-				<p>Copyright &copy; 2018 Teacup Woozy LLC || All rights reserved.</p>
-			</div>
-		</div>
-	</footer>
+        <br><br>
+        <h4>Content Updates Coming Soon!</h4>
+        <br><br><br><br><br><br>
+        <br><br><br><br><br><br>
+
+    </section>
+
+
+    <footer>
+        <br>
+        <h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
+        <h5>Two or three times a month, get hand-curated travel news and stories sent right to your inbox.</h5>
+        <h5>Sign up <a href="http://eepurl.com/dfZ7wr" target="_blank">here</a>!</h5>
+        <br><br>
+        <!-- flexbox -->
+        <div class="footer-container">
+            <div>
+                <p><a href="legal.html">Privacy Policy</a> | <a href="legal.html">Terms of Service</a> | <a href="legal.html">Disclaimers
+                        & Liability</a> | <a href="legal.html">Use of Cookies</a> (no, not those kinds)</p>
+                <p>Copyright &copy; 2018 Teacup Woozy LLC || All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+    <script src="tw.js"></script>
 </body>
+
 </html>
