add navigation to logo and add mailto cunstionality on home page and contact page.

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
                 <img src="images/menu-icon.png" alt="toggle button for dropdown menu">
             </span>
 
-            <a href="#" id="logo">
+            <a href="home.html" id="logo">
                 <h1>T E A C U P W O O Z Y<br>
                     <span>personalized travel planning</span></h1>
             </a>
