--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 				<img src="images/menu-icon.png" alt="toggle button for dropdown menu">
 			</span>
 
-			<a href="#" id="logo"><h1>T E A C U P W O O Z Y<br>
+			<a href="home.html" id="logo"><h1>T E A C U P W O O Z Y<br>
 				<span>personalized travel planning</span></h1>
 			</a>
 			<ul id="main-nav">
@@ -104,7 +104,7 @@
 					<p>Hop on over to my Services page to see the different ways that I can help you to have an amazing trip, or keep scrolling down to read more.</p>
 					<br>
 					<div class="button-container">
-						<p><button class="button" onclick="#">LEARN MORE</button></p>
+						<p><button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Question%20from%20teacupwoozy.com"> LEARN MORE</a></button></p>
 					</div>
 					<br><br>
 				</div>
