--- a/services.html
+++ b/services.html
@@ -16,24 +16,34 @@
 	</script>
 </head>
 <body>
-	<!-- INSERT HEADER ONCE COMPLETED -->
 	<header id="nav-header">
-	<div id="logo">
-		<h1>T E A C U P   W O O Z Y<br>
-		<span>personalized travel planning</span></h1>
-	</div>
-
-	<nav id="nav-container">
-		<a href="#" id="menu-icon"></a>
-		<ul>
-			<li class="nav-menu"><a href="home.html">Home</a></li>
-			<li class="nav-menu"><a href="services.html">Services</a></li>
-			<li class="nav-menu"><a href="blog.html">Blog</a></li>
-			<li class="nav-menu"><a href="about.html">About</a></li>
-			<li class="nav-menu"><a href="contact.html">Contact</a></li>
-		</ul>
-	</nav>	
-</header>
+		<nav class="navbar">
+			<span id="navbar-toggle">
+				<img src="images/menu-icon.png" alt="toggle button for dropdown menu">
+			</span>
+			<a href="home.html" id="logo">
+				<h1>T E A C U P W O O Z Y<br>
+				<span>personalized travel planning</span></h1>
+			</a>
+			<ul id="main-nav">
+				<li>
+					<a href="home.html" class="nav-links">Home</a>
+				</li>
+				<li>
+					<a href="services.html" class="nav-links">Services</a>
+				</li>
+				<li>
+					<a href="blog.html" class="nav-links">Blog</a>
+				</li>
+				<li>
+					<a href="about.html" class="nav-links">About</a>
+				</li>
+				<li>
+					<a href="contact.html" class="nav-links">Contact</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 	<section class="nav-padding">
 	<!-- Main content -->
 
@@ -197,5 +207,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="tw.js"></script>
 </body>
 </html>
