tweak services buttons, change icon colors on servces page.

--- a/services.html
+++ b/services.html
@@ -51,6 +51,7 @@
 	<!-- Air travel planning -->
 	<br>
 	<h2>TRAVEL PLANNING SERVICES</h2>
+	<br><br>
 	<!-- flights -->
 	<article class="services-container">
 		
@@ -61,15 +62,19 @@
 		</header>
 		<div class="services-cell services-right">
 			<h4>Air Travel Planning Package: Get the best routes, connections, and pricing for your destination.</h4>
-			<p>Researching flight itineraries, routes, airlines, stopovers, and prices can be a ton of work, and it can be frustrating. I can make your life easier by doing all of that work for you. And, because I have years of experience finding great routes and great prices, I save my clients time and money all the time.</p>
+			<p>Researching flight itineraries, routes, airlines, stopovers, and prices can be a ton of work, and it 
+				can be frustrating. I can make your life easier by doing all of that work for you. And, because I 
+				ave years of experience finding great routes and great prices, I save my clients time and money all 
+				the time.</p>
 			<br>
-			<button class="button" onclick="#">I'M INTERESTED!</button>
+			<button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Air%20Travel%20Services">I'M INTERESTED!</a></button>
 			<br><br>
 			<h5>$45 PER DESTINATION <br><br>
 				WHAT'S INCLUDED:</h5>
 				<br>
 			<ul class="included-list">
-				<li>A handful of flight options based on your priorities (cost, total travel time, and the number of flights)</li>
+				<li>A handful of flight options based on your priorities (cost, total travel time, and the number 
+					of flights)</li>
 				<li>The pros and cons of the different fights/airlines</li>
 				<li>Suggestions on when to purchase</li>
 				<li>Extra pro tips for purchasing airfare</li>
@@ -86,11 +91,13 @@
 			<img src="images/hotel-icon.png" alt="black and white icon of a bed">
 		</header>
 		<div class="services-cell services-right">
-			<h4>Accommodations Planning Package: I will sort through dozens, if not hundreds, of accommodations and curate a small selection of accommodations.</h4>
-			<p>Sorting through accommodations listings and reviews can be an incredibly time-consuming task. And, quite frankly, it can be overwhelming for a lot of people.</p>
+			<h4>Accommodations Planning Package: I will sort through dozens, if not hundreds, of accommodations 
+				and curate a small selection of accommodations.</h4>
+			<p>Sorting through accommodations listings and reviews can be an incredibly time-consuming task. And, 
+				quite frankly, it can be overwhelming for a lot of people.</p>
 			<p>The perfect places to stay are out there, and I can find them for you.</p>
 			<br>
-			<button class="button" onclick="#">I'M INTERESTED!</button>
+			<button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Accommodations%20Services">I'M INTERESTED!</a></button>
 			<br><br>
 			<h5>PRICES START AT $60 <br><br>
 				WHAT'S INCLUDED:</h5>
@@ -99,7 +106,8 @@
 				<li>A carefully curated list of three or five accommodations, based on your wants and needs.</li>
 				<li>Contact information, pricing, features, and amenities for each accommodation.</li>
 				<li>Details about the surrounding areas. </li>
-				<li>Any pertinent pros or cons for the accommodation - I strive for total transparency so that you can make informed decisions about where you'll stay.</li>
+				<li>Any pertinent pros or cons for the accommodation - I strive for total transparency so that 
+					you can make informed decisions about where you'll stay.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
@@ -114,20 +122,24 @@
 		</header>
 		<div class="services-cell services-right">
 			<h4>Standard Travel Planning Package: Get all of the basics for your trip covered.</h4>
-			<p>Planning an amazing vacation can take an incredible amount of time - something a lot of people don't ever have enough of.</p>
-			<p>With this travel planning package, I will take care of researching all of the basics for you - saving you time and frustration. And, most importantly, we can make your trip a reality.</p>
+			<p>Planning an amazing vacation can take an incredible amount of time - something a lot of people 
+				don't ever have enough of.</p>
+			<p>With this travel planning package, I will take care of researching all of the basics for you - 
+				saving you time and frustration. And, most importantly, we can make your trip a reality.</p>
 			<br>
-			<button class="button" onclick="#">I'M INTERESTED!</button>
+			<button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Standard%20Travel%20Services">I'M INTERESTED!</a></button>
 			<br><br>
 			<h5>$130 PER DESTINATION<br><br>
 				WHAT'S INCLUDED:</h5>
 				<br>
 			<ul class="included-list">
 				<li>Everything in in the Air Travel Planning package and the Accommodations Planning package.
-				A handful of flight options based on your priorities (cost, total travel time, and the number of flights).</li>
+				A handful of flight options based on your priorities (cost, total travel time, and the number of 
+				flights).</li>
 				<li>Details about the surrounding areas.</li>
 				<li>Any visa requirements for entry to the country.</li>
-				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the water is safe to drink, and information for getting cell service.</li>
+				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the 
+					water is safe to drink, and information for getting cell service.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
@@ -141,10 +153,12 @@
 			<img src="images/deluxe-icon.png" alt="black and white icon of beach with umbrella and ball">
 		</header>
 		<div class="services-cell services-cell services-right">
-			<h4>Deluxe Travel Planning Package: This full-service travel planning package includes all of the planning for your next trip!</h4>
-			<p>Would you prefer to have help with researching and planning all aspects of your trip? No problem, that's what I'm here for!</p>
+			<h4>Deluxe Travel Planning Package: This full-service travel planning package includes all of the 
+				planning for your next trip!</h4>
+			<p>Would you prefer to have help with researching and planning all aspects of your trip? No problem, 
+				that's what I'm here for!</p>
 			<br>
-			<button class="button" onclick="#">I'M INTERESTED!</button>
+			<button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Deluxe%20Travel%20Services">I'M INTERESTED!</a></button>
 			<br><br>
 			<h5>PRICES START AT $225 PER DESTINATION<br><br>
 				WHAT'S INCLUDED:</h5>
@@ -170,9 +184,11 @@
 		</header>
 		<div class="services-cell services-right">
 			<h4>Nomad Travel Planning Package: I'll research all of the logistics for your next destination!</h4>
-			<p>Your time is a limited resource and it's valuable. Let me help you to make the best use of your time by taking the chore of travel planning off your plate so that you can focus on your own business.</p>
+			<p>Your time is a limited resource and it's valuable. Let me help you to make the best use of your 
+				time by taking the chore of travel planning off your plate so that you can focus on your own 
+				business.</p>
 			<br>
-			<button class="button" onclick="#">I'M INTERESTED!</button>
+			<button class="button"><a href="mailto:stacy@teacupwoozy.com?subject=Digital%20Nomad%20Services">I'M INTERESTED!</a></button>
 			<br><br>
 			<h5>$225 PER DESTINATION<br><br>
 				WHAT'S INCLUDED:</h5>
@@ -181,7 +197,8 @@
 				<li>A handful of transportation options for getting to your destination.</li>
 				<li>A curated list of five accommodations.</li>
 				<li>Any visa requirements for entry.</li>
-				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the water is safe to drink, and information for getting cell service.</li>
+				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the 
+					water is safe to drink, and information for getting cell service.</li>
 				<li>Information on local customs.</li>
 				<li>Information on co-working spaces.</li>
 				<li>Several cool day trips and/or sights to check out.</li>
@@ -189,7 +206,6 @@
 			</ul>
 		</div>
 	</article>
-
 	</section>
 
 	<footer>
