finalize blog index page layout with associated css styling

--- a/blog_wip.html
+++ b/blog_wip.html
@@ -49,9 +49,9 @@
 <!-- Main Content -->
 	<section class="nav-padding">
 		<br>
-		<h2>TEACUP WOOZY TRAVEL BLOG</h2>
+		<h2>TRAVEL BLOG</h2>
+		<br><br>
 		<article class="blog-container">
-			
 			<div class="blog-photo blog-cell">
 				<img src="images/blog/lemon-ginger-tea.jpg" alt="#">
 			</div>
@@ -60,15 +60,21 @@
 				<p>If you've done any amount of traveling, there's a good chance that you've probably also been
 				sick on the road. It can be truly miserable and... <a href="#" class="blog-link">(more)</a></p>
 			</div>
+		</article>
 
-
+		<article class="blog-container">
+			<div class="blog-photo blog-cell">
+				<img src="images/blog/lemon-ginger-tea.jpg" alt="#">
+			</div>
+			<div class="blog-cell">
+				<h4 class="blog-index-titles"><a href="#">Getting Sick on the Road + the People Who Help Us</a></h4>
+				<p>If you've done any amount of traveling, there's a good chance that you've probably also been
+					sick on the road. It can be truly miserable and... <a href="#" class="blog-link">(more)</a></p>
+			</div>
 		</article>
 
 
 		<br><br>
-		<h4>Content Updates Coming Soon!</h4>
-		<br><br><br><br><br><br>
-		<br><br><br><br><br><br>
 
 	</section>
 
