add getting sick blog post and associated updates to css and post template

--- a/blog_template.html
+++ b/blog_template.html
@@ -55,8 +55,10 @@
         <br><br>
         <article class="blog-post-container">
             <h3>Post Title</h3>
+            <br>
             <p class="blog-date">Month 1, 2018</p>
-            <img src="images/blog/lemon-ginger-tea.jpg" alt="a woman's hand holding a cup of tea">
+            <br>
+            <img src="images/blog/lemon-ginger-tea.jpg" alt="a woman's hand holding a cup of tea" class="inline-image-right ">
             <p>You can do anything your heart can imagine. You can create beautiful things - but you have to see 
                 them in your mind first. If you do too much it's going to lose its effectiveness.
             </p>
@@ -68,7 +70,7 @@
         </article>
         <br><br>
     </section>
-    
+
     <footer>
         <br>
         <h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
