--- a/blog_wip.html
+++ b/blog_wip.html
@@ -67,7 +67,7 @@
 				<img src="images/blog/lemon-ginger-tea.jpg" alt="#">
 			</div>
 			<div class="blog-cell">
-				<h4 class="blog-index-titles"><a href="#">Getting Sick on the Road + the People Who Help Us</a></h4>
+				<h4 class="blog-index-titles"><a href="getting-sick-on-the-road.html">Getting Sick on the Road + the People Who Help Us</a></h4>
 				<p>If you've done any amount of traveling, there's a good chance that you've probably also been
 					sick on the road. It can be truly miserable and... <a href="#" class="blog-link">(more)</a></p>
 			</div>
