--- a/blog_old.html
+++ b/blog_old.html
@@ -25,13 +25,13 @@
                 <img src="images/menu-icon.png" alt="toggle button for dropdown menu">
             </span>
 
-            <a href="home.html" id="logo">
+            <a href="index.html" id="logo">
                 <h1>T E A C U P W O O Z Y<br>
                     <span>personalized travel planning</span></h1>
             </a>
             <ul id="main-nav">
                 <li>
-                    <a href="home.html" class="nav-links">Home</a>
+                    <a href="index.html" class="nav-links">Home</a>
                 </li>
                 <li>
                     <a href="services.html" class="nav-links">Services</a>
@@ -51,23 +51,14 @@
     <!-- Main Content -->
     <section class="nav-padding">
         <br>
-        <h2>TRAVEL BLOG</h2>
-        <br><br>
-
-        <article class="blog-container">
-            <div class="blog-photo blog-cell">
-                <img src="images/blog/lemon-ginger-tea.jpg" alt="#">
-            </div>
-            <div class="blog-cell">
-                <h4 class="blog-index-titles"><a href="getting-sick-on-the-road.html">Getting Sick on the Road + the
-                        People Who Help Us</a></h4>
-                <p>If you've done any amount of traveling, there's a good chance that you've probably also been
-                    sick on the road. It can be truly miserable and... <a href="getting-sick-on-the-road.html" class="blog-link">(more)</a></p>
-            </div>
-        </article>
+        <h2>TEACUP WOOZY TRAVEL BLOG</h2>
+        
 
 
         <br><br>
+        <h4>Content Updates Coming Soon!</h4>
+        <br><br><br><br><br><br>
+        <br><br><br><br><br><br>
 
     </section>
 
