add thumbnails for blog index page, resize blog index photos to match

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
 
         <article class="blog-container">
             <div class="blog-photo blog-cell">
-                <img src="images/blog/lemon-ginger-tea.jpg" alt="#">
+                <img src="images/blog/thumbnails/woman-walking-near-beach.jpg" alt="">
             </div>
             <div class="blog-cell">
                 <h4 class="blog-index-titles"><a href="getting-sick-on-the-road.html">Getting Sick on the Road + the
@@ -66,9 +66,19 @@
             </div>
         </article>
 
+        <article class="blog-container">
+            <div class="blog-photo blog-cell">
+                <img src="images/blog/thumbnails/lemon-ginger-tea.jpg" alt="a woman's hand holding a cup of ginger tea">
+            </div>
+            <div class="blog-cell">
+                <h4 class="blog-index-titles"><a href="getting-sick-on-the-road.html">Getting Sick on the Road + the
+                        People Who Help Us</a></h4>
+                <p>If you've done any amount of traveling, there's a good chance that you've probably also been
+                    sick on the road. It can be truly miserable and... <a href="getting-sick-on-the-road.html" class="blog-link">(more)</a></p>
+            </div>
+        </article>
 
         <br><br>
-
     </section>
 
 
