narrow alignment of each listing on blog index page

--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,8 @@
 
         <article class="blog-container">
             <div class="blog-photo blog-cell">
-                <img src="images/blog/thumbnails/woman-walking-near-beach.jpg" alt="">
+                <img src="images/blog/thumbnails/woman-walking-near-beach.jpg" alt="a woman walking on a small ridge overlooking 
+                beaches on both sides">
             </div>
             <div class="blog-cell">
                 <h4 class="blog-index-titles"><a href="getting-sick-on-the-road.html">Getting Sick on the Road + the
